[package]
name = "pallet-nfts-runtime-api"
version = "6.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime API for the FRAME NFTs pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
frame-support = { version = "20.0.0", default-features = false, path = "../../support" }
pallet-nfts = { version = "14.0.0", default-features = false, path = "../../nfts" }
sp-api = { version = "18.0.0", default-features = false, path = "../../../primitives/api" }

[features]
default = ["std"]
std = [
	"codec/std",
    "frame-support/std",
	"pallet-nfts/std",
	"sp-api/std",
]
